# raylib-breakout

./: CMakeLists.txt  quick-rebuild-debug.sh
include/ray-breakout/core/: Entity.h  EntityEventCallback.h  EntityManager.h  EventBus.h  Events.h  Game.h  Geometry.h  Level.h  PollInput.h  Shapes.h  Timer.h
include/ray-breakout/game/: PlayerEntity.h  TestLevel.h
include/ray-breakout/ui/: Colors.h  Renderer.h  Window.h
src/: main.cpp
src/core/: EntityEventCallback.cpp  EntityManager.cpp  EventBus.cpp  Game.cpp  Level.cpp  PollInput.cpp
src/game/: TestLevel.cpp
src/ui/: Renderer.cpp  Window.cpp
